source/snippetCreation/snippetCreation.css
/* Snippets Container */
#snippet {
  display: block;
  position: relative;
  margin: 10px;

  height: 350px; /* 538px / 1024px */
  width: 700px; /* 834px / 1440px */ 
  border-radius: 12px;

  color: #2D2E2EB2;
  background-color: #F6F6F6;
} 

/* Container Title */
#snippet h1 {
  display: flex;
  justify-content: center;
  align-items: center;

  height: 10%;
  margin: 0;

  font-weight: 400;
  font-size: 24px; 
}

/* Snippets List */
#snippet ul {
  list-style-type: none;
  justify-content: center;
  height: 69%;
  overflow-y: auto;

  margin: 0px;
  padding: 0px;
}

/* Individual Entries */
.snippet-box {
  display: flex;
  flex-direction: column;

  margin: 5px 10px;
  border-radius: 5px;
  background-color: #00000014;
}

/* Snippet Language */
.snippet-box .snippet-type {
  display: flex;
  justify-content: center;
  align-content: center;

  border-radius: 4px;
  width: 70px;
  margin: 8px;
  margin-bottom: 0;
  padding: 5px;

  color: #BC6C25;
  background-color: var(--primary-gray, #F6F6F6);
  border: 1px solid #BC6C25;
}

/* Snippet Code */
.snippet-box button {
  width: 100%;
  margin: 0 10px 0 10px;
  word-wrap: break-word;
  white-space: normal;

  background-color: transparent;
  border-color: transparent;
  text-align: left;
  color: #2D2E2EB2;

  overflow-y: auto;
}

/* Language Selection */
#language-select {
  position: absolute;
  bottom: 20%;

  border: transparent;
  outline: none;
  border-radius: 5px;
  margin: 10px 15px;
  padding: 5px;
}

/* Snippet Form */
#snippet form {
  position: absolute;
  bottom: 10px;
  width: 100%;
  height: 18%;
  
  display: flex;
  align-items: center;
}

#code-area {
  width: 100%;
  height: 100%;

  background-color: #fff;
  padding: 10px;
  margin: 10px;
  border: 2.5px solid #cccccc92;
  border-radius: 5px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);

  box-sizing: border-box;
  overflow-y: auto;
  z-index: 1;
}

#snippet-form button {
  display: flex;
  align-items: center;
  justify-content: center;

  position: absolute;
  right: 20px;
  border-radius: 10%;
  padding: 4px;

  background-color: rgb(1, 64, 1);
  border: none;
  outline: none;
  cursor: pointer;
  z-index: 2;
}

#snippet-form button img {
  width: 24px;
  height: 24px;
}

#snippet-form button:hover {
  background-color: rgb(0, 100, 0); /* Lighter green color */
}

#snippet-form button:active {
  background-color: rgb(0, 128, 0); /* Darker green color for pressed effect */
  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.2); /* Pressed down effect */
}

#alert {
  opacity: 0;
  transition: 1s;

  position: absolute;
  inset: 0px;
  margin: auto;
  padding: 20px;
  height: 14%;
  width: 200px;

  color: var(--primary-gray, #F6F6F6);
  background-color: var(--primary-orange, #BC6C25);
  border-radius: 5px;
  text-align: center;
  line-height: 13px;
}

#alert.fade-in {
  opacity: 1;
  transition: 0.1s;
  z-index: 2;
}

/* code highlighting format */
.hljs {
  background: none !important;
  padding: 0 !important;
  margin: 0 !important;
}

